--- a/static_files/bunnyfinder-config/config.toml.tmpl
+++ b/static_files/bunnyfinder-config/config.toml.tmpl
@@ -2,6 +2,7 @@ rpc_port = {{ .ListenRPCPortNum }} # rpc port, rest api port is http_port+1.
 http_port = {{ .ListenPortNum }} # rpc port, rest api port is http_port+1.
 execute_rpc = "{{ .EL_HTTP_URL }}"
 beacon_rpc = "{{ .CL_HTTP_URL }}"
+honest_beacon_rpc = "{{ .HONEST_CL_HTTP_URL }}"
 dbconnect = "{{ .DBConnect }}"
 reward_file = "/root/reward.csv"
 swag_host = "127.0.0.1:12100"
